1998-12-11  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* Makefile.am: Remove ListShuffler

	* simtools.h: Remove ListShuffler protocol and ListShuffler class
	definition

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	
	* simtools.m: Include defobj.h.  Don't include simtools/Archiver.h
	or objectbase/Arguments.m.  
	(initSwarmAppArguments): Don't initialize arguments or archiver here.
	Call initDefObj after initModule.

	* Makefile.am (SRC, simtools_HEADERS): Remove
	Arguments.[hm].

	* Archiver.[hm]: Remove (moved to defobj).

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT, AGE): Increment.  Swarm 1.3.1 released.

1998-09-13  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.[hm] (initSwarmAppArguments): Call Argument's
	createArgc:Argv:version:bugAddress:, and body of former
	initSwarmArguments.
	(initSwarmApp): New function.
	(initSwarm, initSwarmArguments): Call initSwarmAppArguments.
	
1998-09-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Archiver.m ([Archiver -processQuotedExpr:]): Use ARCHIVERLITERALP.

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.

1998-08-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (SRC, simtools_HEADERS): Add ListShuffler and
	logically reorder.

	From Sven Thommesen <sthomme@humsci.auburn.edu>:
	* simtools.h (ListShuffler): New protocol.

	* ListShuffler.[hm]: New files.

1998-08-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* QSort.m ([QSort +_unFlatten_:], [QSort +reverseOrderOf:]): Likewise.

	* Archiver.m (defaultPath): Renamed from defaultFileName.
	Return const char * instead of id.

	* Archiver.h (Archiver): Replace archiveFileNameString with path,
	a const char * instead of id.

	* Archiver.[hm]: Replace load:fromFileNamed: with load:path:.
	Replace ensure:archiveFileName: with ensure:path:.
	Replace setArchiveFileName: with setPath:.
